Update success message for Valentine's Day

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Step 3: Success -->
         <div class="success-screen hidden" id="success-screen">
             <h1>❤️ Happy Valentine's Day! ❤️</h1>
-            <p>You have successfully confirmed that you possess a heart.</p>
+            <p>I Love YOU ! .</p>
         </div>
 
     </div>
